--- a/style/style.css
+++ b/style/style.css
@@ -4,7 +4,7 @@ font-family: Arial, Helvetica, sans-serif
 
 .header {
   padding: 20px;
-  border-bottom: 1px solid gray;
+  border-bottom: 1px solid rgb(255, 0, 0);
   text-align: center;
   flex: 0;
 }
@@ -30,7 +30,7 @@ padding-bottom: 90px;
 }
 
 .hi{
-background-color: #445162;
+background-color: #ff0000;
 padding: 50px 0;
 }
 
